--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,6 @@ name = "pypi"
 
 [packages]
 numpy = "*"
-notebook = "*"
 jupyter-client = "*"
 jupyter = "*"
 matplotlib = "*"
@@ -13,6 +12,8 @@ tqdm = "*"
 scipy = "*"
 chipwhisperer = "*"
 importlib-metadata = "*"
+ipykernel = "*"
+python-docx = "*"
 
 [dev-packages]
 
